# concilia_dfe

./: .dockerignore  .gitignore  README.md  apprunner.yaml  apprunner2.yaml  dockerfile  pyproject.toml  requirements.txt
awsCLI/: deploy_to_ecr.sh
src/: app.py
